* trying to optimize threading.